--- a/settings.gradle
+++ b/settings.gradle
@@ -2,9 +2,8 @@ pluginManagement {
     repositories {
         mavenLocal()
         mavenCentral()
-//        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         maven { url 'https://plugins.gradle.org/m2/' }
     }
 }
-rootProject.name = 'gradle-project'
+rootProject.name = 'kotlin-contracts-samples'
 
