--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,27 @@
 buildscript {
+//    ext.kotlinVersion =  '1.3-SNAPSHOT'
+    ext.kotlinVersion =  '1.3.30-dev-162'
+
     repositories {
         mavenCentral()
         mavenLocal()
+        maven { url "https://dl.bintray.com/kotlin/kotlin-dev" }
     }
 
     dependencies {
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.3-SNAPSHOT")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
     }
 }
 
 apply plugin: 'kotlin'
 
-group 'kotlin.contracts.samples'
+group 'kotlin-contracts-samples'
 version '1.0'
 
 repositories {
-    mavenLocal()
     mavenCentral()
+    mavenLocal()
+    maven { url "https://dl.bintray.com/kotlin/kotlin-dev" }
 }
 
 /*
@@ -30,17 +35,17 @@ configurations {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     
     // package with core contextual contracts dsl
-    compile "org.jetbrains.kotlin:kotlin-contracts-dsl:1.3-SNAPSHOT"
+    compile "org.jetbrains.kotlin:kotlin-contracts-dsl:$kotlinVersion"
     
     // package with contracts subplugin dsl
-    compile "org.jetbrains.kotlin:kotlin-contracts-subplugins-dsl:1.3-SNAPSHOT"
+    compile "org.jetbrains.kotlin:kotlin-contracts-subplugins-dsl:$kotlinVersion"
     // compile "another contracts subplugin dsl"
 
-    kotlinContracts "org.jetbrains.kotlin:kotlin-contracts:1.3-SNAPSHOT"
-    contractPlugin "org.jetbrains.kotlin:kotlin-contracts-subplugins:1.3-SNAPSHOT"
+    kotlinContracts "org.jetbrains.kotlin:kotlin-contracts:$kotlinVersion"
+    contractPlugin "org.jetbrains.kotlin:kotlin-contracts-subplugins:$kotlinVersion"
     // contractPlugin "another contracts subplugin"
 }
 
